--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   entryPoint: main
   templates:
-    - name: custom
+    - name: main
       type: custom
       spec:
         runtime: python:3.8
