--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -12,3 +12,7 @@ spec:
         entryPoints:
           main:
             command: ["python", "fetch_suppliers.py"]
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "512Mi"
