--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -1,5 +1,5 @@
-apiVersion: argoproj.io/v1alpha1
-kind: WorkflowTemplate
+apiVersion: ai.sap.com/v1alpha1
+kind: pipeline
 metadata:
   name: fetch-supplier-data-pipeline
   annotations:
