--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -1,34 +1,18 @@
-apiVersion: ai.sap.com/v1alpha1
-kind: pipeline
+apiVersion: argoproj.io/v1alpha1
+kind: WorkflowTemplate
 metadata:
   name: fetch-supplier-data-pipeline
-  annotations:
-    scenarios.ai.sap.com/description: "Introduction to SAP AI Core"
-    scenarios.ai.sap.com/name: "NORTHWIND-DEMO"
-    executables.ai.sap.com/description: "Greets the user"
-    executables.ai.sap.com/name: "NORTHWIND Pipeline"
-  labels:
-    scenarios.ai.sap.com/id: "learning"
-    ai.sap.com/version: "1.0"
 spec:
   entryPoint: main
-  arguments:
-    parameters:
-      - name: script-path
-        value: "fetch_suppliers.py"
   templates:
     - name: main
-      container:
-        image: python:3.8
-        command: ["python"]
-        workingDir: /workspace
+      type: custom
+      spec:
+        runtime: python:3.8
+        entryPoints:
+          main:
+            command: ["python", "fetch_suppliers.py"]
         resources:
           requests:
-            cpu: "1"
-            memory: "1Gi"
-          volumeMounts:
-          - name: workspace-volume
-            mountPath: /workspace
-  volumes:
-    - name: workspace-volume
-      emptyDir: {}
+            cpu: "500m"
+            memory: "512Mi"
