--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -2,8 +2,20 @@ apiVersion: argoproj.io/v1alpha1
 kind: WorkflowTemplate
 metadata:
   name: fetch-supplier-data-pipeline
+  annotations:
+    scenarios.ai.sap.com/description: "Introduction to SAP AI Core"
+    scenarios.ai.sap.com/name: "NORTHWIND-DEMO"
+    executables.ai.sap.com/description: "Greets the user"
+    executables.ai.sap.com/name: "NORTHWIND Pipeline"
+  labels:
+    scenarios.ai.sap.com/id: "learning"
+    ai.sap.com/version: "1.0"
 spec:
   entryPoint: main
+  arguments:
+    parameters:
+      - name: script-path
+        value: "fetch_suppliers.py"
   templates:
     - name: main
       type: custom
@@ -14,5 +26,5 @@ spec:
             command: ["python", "fetch_suppliers.py"]
         resources:
           requests:
-            cpu: "500m"
-            memory: "512Mi"
+            cpu: "1"
+            memory: "1Gi"
