--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -22,5 +22,5 @@ spec:
             command: ["python", "fetch_suppliers.py"]
         resources:
           requests:
-            cpu: "500m"
-            memory: "512Mi"
+            cpu: "1"
+            memory: "1Gi"
