--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -11,12 +11,15 @@ metadata:
     scenarios.ai.sap.com/id: "learning"
     ai.sap.com/version: "1.0"
 spec:
-  description: "Fetch and process data from the Northwind service."
-  artifact:
-    type: python
-    reference: fetch_suppliers.py
-  arguments: {}
-  resources:
-    requests:
-      cpu: "1"
-      memory: "1Gi"
+  entryPoint: fetch-supplier-data-pipeline
+  templates:
+    - name: fetch-supplier-data-pipeline
+      script:
+        runtime: python:3.8
+        entryPoints:
+          main:
+            command: ["python", "fetch_suppliers.py"]
+        resources:
+          requests:
+            cpu: "1"
+            memory: "1Gi"
