--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -11,15 +11,15 @@ metadata:
     scenarios.ai.sap.com/id: "learning"
     ai.sap.com/version: "1.0"
 spec:
-  entryPoint: fetch-supplier-data-pipeline
+  # entryPoint: fetch-supplier-data-pipeline
   templates:
     - name: fetch-supplier-data-pipeline
       script:
         runtime: python:3.8
-        # entryPoint:
-        #   main:
-        #     command: ["python", "fetch_suppliers.py"]
-        entrypoint: fetch_suppliers.py
+        entryPoint:
+          main:
+            command: ["python", "fetch_suppliers.py"]
+        # entrypoint: fetch_suppliers.py
         resources:
           requests:
             cpu: "1"
