--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -1,26 +1,24 @@
-apiVersion: argoproj.io/v1alpha1
-kind: WorkflowTemplate
+apiVersion: ai.sap.com/v1alpha1
+kind: TaskTemplate
 metadata:
-  name: fetch-supplier-data-pipeline
-  annotations:
-    scenarios.ai.sap.com/description: "Introduction to SAP AI Core"
-    scenarios.ai.sap.com/name: "NORTHWIND-DEMO"
-    executables.ai.sap.com/description: "Greets the user"
-    executables.ai.sap.com/name: "NORTHWIND Pipeline"
-  labels:
-    scenarios.ai.sap.com/id: "learning"
-    ai.sap.com/version: "1.0"
+  name: northwind-task
+  namespace: default
 spec:
-  # entryPoint: fetch-supplier-data-pipeline
-  templates:
-    - name: fetch-supplier-data-pipeline
-      script:
-        runtime: python:3.8
-  entryPoint:
-    main:
-      command: ["python", "fetch_suppliers.py"]
-        # entrypoint: fetch_suppliers.py
+  description: "Task to fetch and process data from the Northwind OData service."
+  runtime:
+    name: python310  # Specify the Python runtime to execute the script
+  entrypoint: northwind_processor.py  # Specify the main Python file in the repository
+  artifact:
+    type: git
+    repository:
+      url: "https://github.com/Priya041199/AI-DEMO"  # Replace with your Git repo URL
+      branch: "main"  # Specify the branch to pull
+      path: "/"  # Path to the script in the repo root; adjust if necessary
   resources:
     requests:
-      cpu: "1"
+      cpu: "500m"
       memory: "1Gi"
+  environment:
+    variables:
+      - name: NORTHWIND_ENDPOINT
+        value: "https://services.odata.org/V3/Northwind/Northwind.svc/Products"
