--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -21,8 +21,12 @@ spec:
   - name: greeter
     container:
       image: docker.io/python:latest
-      command: "fetch_suppliers.py"
+      command: ["/bin/sh", "-c"]
+      args:
+        # - "python /app/src/main.py"
+        - "fetch_suppliers.py"
       resources:
           requests:
             cpu: "1"
             memory: "1Gi"
+          
