--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -20,8 +20,8 @@ spec:
         - python3
         - '-c'
     args:
-        # - "python /app/src/fetch_suppliers.py"
-        - "fetch_suppliers.py"
+        - "python /app/src/fetch_suppliers.py"
+        # - "fetch_suppliers.py"
     resources:
         requests:
         cpu: "1"
