--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -21,7 +21,10 @@ spec:
         - '-c'
       args:
         # - "python /app/src/fetch_suppliers.py"
-        - "fetch_suppliers.py"
+        # - "fetch_suppliers.py"
+       - | 
+          import os 
+          dir_path = os.path.dirname(os.path.realpath(__file__))
     resources:
         requests:
         cpu: "1"
