--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -20,11 +20,12 @@ spec:
         - python3
         - '-c'
       args:
-        # - "python /app/src/fetch_suppliers.py"
+        - |
+         "python /app/src/fetch_suppliers.py"
         # - "fetch_suppliers.py"
-       - | 
-          import os 
-          dir_path = os.path.dirname(os.path.realpath(__file__))
+       # - | 
+       #    import os 
+       #    dir_path = os.path.dirname(os.path.realpath(__file__))
     resources:
         requests:
         cpu: "1"
