--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -30,7 +30,7 @@ spec:
         requests:
         cpu: "1"
         memory: "1Gi"
-    outputs:
-      artifacts:
-      - name: supplier-data
-        path: /app/src/supplier_data.json
+    # outputs:
+      # artifacts:
+      # - name: supplier-data
+      #   path: /app/src/supplier_data.json
