--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -22,12 +22,12 @@ spec:
       args:
         # - |
         #  "python /app/src/fetch_suppliers.py"
-        # - "fetch_suppliers.py"
+        - "fetch_suppliers.py"
        # - | 
        #    import os 
        #    dir_path = os.path.dirname(os.path.realpath(__file__))
-       - |
-        print("Hello World")
+       # - |
+       #  print("Hello World")
     resources:
         requests:
         cpu: "1"
