--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -20,14 +20,14 @@ spec:
         - python3
         - '-c'
       args:
-        # - |
-        #  "python /app/src/fetch_suppliers.py"
+        - |
+         "python /app/src/fetch_suppliers.py"
         # - "fetch_suppliers.py"
        # - | 
        #    import os 
        #    dir_path = os.path.dirname(os.path.realpath(__file__))
-       - |
-        print("Hello World")
+       # - |
+       #  print("Hello World")
     resources:
         requests:
         cpu: "1"
