--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -32,7 +32,7 @@ spec:
         requests:
         cpu: "1"
         memory: "1Gi"
-    # outputs:
-    #   artifacts:
-    #   - name: supplier-data
-    #     path: fetch_suppliers.py
+    outputs:
+      artifacts:
+      - name: supplier-data
+        path: fetch_suppliers.py
