--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -19,20 +19,21 @@ spec:
         image: python:3.8  # Docker image for the script runtime
         command: ["python"]
         source: |
-          import requests
+          # import requests
 
-          NORTHWIND_ENDPOINT = "https://services.odata.org/V3/Northwind/Northwind.svc/Suppliers"
+          # NORTHWIND_ENDPOINT = "https://services.odata.org/V3/Northwind/Northwind.svc/Suppliers"
 
-          def fetch_suppliers():
-              response = requests.get(NORTHWIND_ENDPOINT)
-              if response.status_code == 200:
-                  print("Fetched suppliers:")
-                  print(response.json())
-              else:
-                  print(f"Failed to fetch suppliers: {response.status_code}")
+          # def fetch_suppliers():
+          #     response = requests.get(NORTHWIND_ENDPOINT)
+          #     if response.status_code == 200:
+          #         print("Fetched suppliers:")
+          #         print(response.json())
+          #     else:
+          #         print(f"Failed to fetch suppliers: {response.status_code}")
 
-          if __name__ == "__main__":
-              fetch_suppliers()
+          # if __name__ == "__main__":
+          #     fetch_suppliers()
+          python fetch_suppliers.py
       resources:
         requests:
           cpu: "1"
