--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -16,16 +16,29 @@ spec:
     - name: fetch-supplier-data-pipeline
       script:
         image: python:3.8
-        command: ["python", "fetch_suppliers.py"]
-        volumeMounts:
-          - name: script-volume
-            mountPath: /mnt/scripts
+        command: ["python"]
+        source: |
+          import os
+          import sys
+
+          # Ensure the /tmp directory exists
+          if not os.path.exists('/tmp'):
+              os.makedirs('/tmp')
+
+          # Simulate fetching supplier data and writing to a file
+          supplier_data = "Supplier data from Northwind service"
+          with open('/tmp/supplier-output.txt', 'w') as f:
+              f.write(supplier_data)
+          print("Supplier data fetched and written to /tmp/supplier-output.txt")
+      volumeMounts:
+        - name: script-volume
+          mountPath: /mnt/scripts
       outputs:
         parameters:
           - name: supplier-output
             valueFrom:
               path: /tmp/supplier-output.txt
-      volumes:
-        - name: script-volume
-          configMap:
-            name: fetch-suppliers-script
+  volumes:
+    - name: script-volume
+      configMap:
+        name: fetch-suppliers-script
