--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -20,36 +20,33 @@ spec:
         source: |
           # import requests
 
-def fetch_suppliers():
-    # OData Service URL
-    url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
+          def fetch_suppliers():
+              # OData Service URL
+              url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
 
-    try:
-        # Send GET request to fetch supplier data
-        # response = requests.get(url)
-        # response.raise_for_status()  # Raise an error for HTTP errors
+              try:
+                  # Send GET request to fetch supplier data
+                  # response = requests.get(url)
+                  # response.raise_for_status()  # Raise an error for HTTP errors
 
-        # Parse JSON response
-        # data = response.json()
-        data = [
-            {"SupplierID": 1, 
-            "CompanyName": "23456", 
-            "Country": "UK"}
-        ]
-        # suppliers = data.get("value", [])
-        suppliers = data
+                  # Parse JSON response
+                  # data = response.json()
+                  data = [
+                      {"SupplierID": 1, "CompanyName": "23456", "Country": "UK"}
+                  ]
+                  # suppliers = data.get("value", [])
+                  suppliers = data
 
-        # Display supplier data
-        print("Supplier Data:")
-        for supplier in suppliers:
-            print("ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}")
-            # print("ID: {supplier[1]}")
+                  # Display supplier data
+                  print("Supplier Data:")
+                  for supplier in suppliers:
+                      print(f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}")
 
-    except Exception as e:
-        print(f"Error fetching supplier data: {e}")
+              except Exception as e:
+                  print(f"Error fetching supplier data: {e}")
 
-    if __name__ == "__main__":
-    fetch_suppliers()
+          if __name__ == "__main__":
+              fetch_suppliers()
       volumeMounts:
         - name: script-volume
           mountPath: /mnt/scripts
