--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -18,7 +18,7 @@ spec:
         image: python:3.8
         command: ["python"]
         source: |
-          # import requests
+          import requests
 
           def fetch_suppliers():
               # OData Service URL
@@ -26,16 +26,13 @@ spec:
 
               try:
                   # Send GET request to fetch supplier data
-                  # response = requests.get(url)
-                  # response.raise_for_status()  # Raise an error for HTTP errors
+                  response = requests.get(url)
+                  response.raise_for_status()  # Raise an error for HTTP errors
 
                   # Parse JSON response
-                  # data = response.json()
-                  data = [
-                      {"SupplierID": 1, "CompanyName": "23456", "Country": "UK"}
-                  ]
-                  # suppliers = data.get("value", [])
-                  suppliers = data
+                  data = response.json()
+                  suppliers = data.get("value", [])
+                  # suppliers = data
 
                   # Display supplier data
                   print("Supplier Data:")
