--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -18,41 +18,36 @@ spec:
         image: python:3.8
         command: ["python"]
         source: |
-          # import requests
+          import requests
 
-          # def fetch_suppliers():
-          #     # OData Service URL
-          #     url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
+          def fetch_suppliers():
+              # OData Service URL
+              url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
 
-          #     try:
-          #         # Send GET request to fetch supplier data
-          #         response = requests.get(url)
-          #         response.raise_for_status()  # Raise an error for HTTP errors
+              try:
+                  # Send GET request to fetch supplier data
+                  response = requests.get(url)
+                  response.raise_for_status()  # Raise an error for HTTP errors
 
-          #         # Parse JSON response
-          #         data = response.json()
-          #         suppliers = data.get("value", [])
-          #         # suppliers = data
+                  # Parse JSON response
+                  data = response.json()
+                  suppliers = data.get("value", [])
+                  # suppliers = data
 
-          #         # Display supplier data
-          #         print("Supplier Data:")
-          #         for supplier in suppliers:
-          #             print(f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}")
+                  # Display supplier data
+                  print("Supplier Data:")
+                  for supplier in suppliers:
+                      print(f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}")
 
-          #     except Exception as e:
-          #         print(f"Error fetching supplier data: {e}")
+              except Exception as e:
+                  print(f"Error fetching supplier data: {e}")
 
-          # if __name__ == "__main__":
-          #     fetch_suppliers()
-          print("fetch_suppliers.py")
+          if __name__ == "__main__":
+              fetch_suppliers()
+          # print("fetch_suppliers.py")
       volumeMounts:
         - name: script-volume
           mountPath: /mnt/scripts
-      outputs:
-        parameters:
-          - name: supplier-output
-            valueFrom:
-              path: /tmp/supplier-output.txt
   volumes:
     - name: script-volume
       configMap:
