--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -18,7 +18,9 @@ spec:
         image: python:3.8-slim
         command: ["sh", "-c"]
         source: |
-          pip install requests && python - <<EOF
+          set -e  # Exit immediately if a command exits with a non-zero status
+          pip install requests 
+          python - <<EOF
           import requests
 
           def fetch_suppliers():
@@ -47,10 +49,10 @@ spec:
               fetch_suppliers()
           EOF
           # print("fetch_suppliers.py")
-      volumeMounts:
-        - name: script-volume
-          mountPath: /mnt/scripts
-  volumes:
-    - name: script-volume
-      configMap:
-        name: fetch-suppliers-script
+  #     volumeMounts:
+  #       - name: script-volume
+  #         mountPath: /mnt/scripts
+  # volumes:
+  #   - name: script-volume
+  #     configMap:
+  #       name: fetch-suppliers-script
