--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -25,7 +25,7 @@ spec:
 
           def fetch_suppliers():
           
-              os.makedirs('/tmp', exist_ok=True)
+              # os.makedirs('/tmp', exist_ok=True)
               
               # OData Service URL
               url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
@@ -41,11 +41,11 @@ spec:
 
                   # Display supplier data
                   print("Supplier Data:")
-                  with open('/tmp/supplier-output.txt', 'w') as f:
-                    for supplier in suppliers:
-                          output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
-                          print(output)
-                          f.write(output)
+                  # with open('/tmp/supplier-output.txt', 'w') as f:
+                  for supplier in suppliers:
+                        output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
+                        print(output)
+                        # f.write(output)
 
               except Exception as e:
                   print(f"Error fetching supplier data: {e}")
