--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -19,7 +19,7 @@ spec:
         command: ["sh", "-c"]
         source: |
           set -e  # Exit immediately if a command exits with a non-zero status
-          mkdir -p /tmp
+          # mkdir -p /tmp
           pip install requests && python - <<EOF
           import os
           import requests
@@ -28,38 +28,37 @@ spec:
               os.makedirs('/tmp', exist_ok=True)
               
               # OData Service URL
-          url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
+              url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
+    
+              try:
+                  # Send GET request to fetch supplier data
+                  response = requests.get(url)
+                  response.raise_for_status()  # Raise an error for HTTP errors
+        
+                  # Parse JSON response
+                  data = response.json()
+                  suppliers = data.get("value", [])
+        
+                  # Display supplier data
+                  print("Supplier Data:")
+                  with open('/argo/outputs/supplier-output.txt', 'w') as f:
+                      for supplier in suppliers:
+                          output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
+                          print(output)
+                              # f.write(output)
 
-          # try:
-              # Send GET request to fetch supplier data
-          response = requests.get(url)
-          response.raise_for_status()  # Raise an error for HTTP errors
-
-          # Parse JSON response
-          data = response.json()
-          suppliers = data.get("value", [])
-
-          # Display supplier data
-          print("Supplier Data:")
-          # with open('/tmp/supplier-output.txt', 'w') as f:
-          for supplier in suppliers:
-              output = f"ID: {supplier['SupplierID']}, Name: {supplier['CompanyName']}, Country: {supplier['Country']}\n"
-              print(output)
-                  # f.write(output)
-
-            except Exception as e:
-                print(f"Error fetching supplier data: {e}")
+              except Exception as e:
+                  print(f"Error fetching supplier data: {e}")
 
         if __name__ == "__main__":
             fetch_suppliers()
           EOF
-          # print("fetch_suppliers.py")
-      # outputs:
-      #   parameters:
-      #     - name: supplier-output
-      #       valueFrom:
-      #         path: /tmp/supplier-output.txt
-  #     volumeMounts:
+      outputs:
+        parameters:
+          - name: supplier-output
+            valueFrom:
+              path: /argo/outputs/supplier-output.txt
+      # volumeMounts:
   #       - name: script-volume
   #         mountPath: /mnt/scripts
   # volumes:
