--- a/files/pipeline.yaml
+++ b/files/pipeline.yaml
@@ -25,7 +25,7 @@ spec:
           import requests
 
           def fetch_suppliers():
-              os.makedirs('/tmp', exist_ok=True)
+              # os.makedirs('/tmp', exist_ok=True)
               
               # OData Service URL
               url = "https://services.odata.org/northwind/northwind.svc/Suppliers?$format=json"
